solved all comments